--- a/repository-setup/repository-config.ini
+++ b/repository-setup/repository-config.ini
@@ -5,5 +5,5 @@ PROJECT_NAME="Cogsworth CLI Tools"
 REPOSITORY_NAME="cogsworth-cli"
 COPYRIGHT = '2023, Myron Walker'
 AUTHOR_NAME = 'Myron Walker'
-CUSTOM_CLI_ALIAS=""
-CUSTOM_CLI_ENTRY_SCRIPT=""
+CUSTOM_CLI_ALIAS="cogsw"
+CUSTOM_CLI_ENTRY_SCRIPT="$REPOSITORY_DIR/source/packages/cogsworth/cli/cogsw_application.py"
