--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,13 @@ packages = [{include="cogsworth", from="source/packages"}]
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
 click = "^8.1.4"
+pymongo = {extras = ["srv"], version = "^4.0.0", optional = true}
+couchdb = {version = "^1.2", optional = true}
+mojo-xmodules = "^0.0.52"
+
+[tool.poetry.extras]
+mongodb = ["pymongo"]
+couchdb = ["couchdb"]
 
 [tool.poetry.group.dev.dependencies]
 myst-parser = "^0.18.1"
