--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ pymongo = {extras = ["srv"], version = "^4.0.0", optional = true}
 couchdb = {version = "^1.2", optional = true}
 mojo-xmodules = "^0.0.52"
 
+[tool.poetry.scripts]
+greet = "cogsworth.cli.cogsw_command:cogsw_root_command"
+
 [tool.poetry.extras]
 mongodb = ["pymongo"]
 couchdb = ["couchdb"]
