--- a/repository-setup/repository-config.ini
+++ b/repository-setup/repository-config.ini
@@ -1,9 +1,9 @@
 # The first part of this file must contain only simple variable declarations so
 # it can maintain compatibility with config parser
 [DEFAULT]
-PROJECT_NAME="Cogsworth CLI Tools"
-REPOSITORY_NAME="cogsworth-cli"
+PROJECT_NAME="Pycis CLI Tools"
+REPOSITORY_NAME="pycis-cli"
 COPYRIGHT = '2023, Myron Walker'
 AUTHOR_NAME = 'Myron Walker'
-CUSTOM_CLI_ALIAS="cogsw"
-CUSTOM_CLI_ENTRY_SCRIPT="$REPOSITORY_DIR/source/packages/cogsworth/cli/cogsw_command.py"
+CUSTOM_CLI_ALIAS="pycis"
+CUSTOM_CLI_ENTRY_SCRIPT="$REPOSITORY_DIR/source/packages/pycis/cli/pycis_command.py"
