--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pycis-cli"
-description = "Pycis CLI Tools"
+description = "Python Continuous Integration System (PyCIS) - CLI Tools"
 version = "0.0.1"
 authors = []
 readme = "README.rst"
