--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ click = "^8.1.4"
 pymongo = {extras = ["srv"], version = "^4.0.0", optional = true}
 couchdb = {version = "^1.2", optional = true}
 mojo-xmodules = ">=0.0.65 <0.1.0"
+mojo-config = "^0.0.20"
 
 [tool.poetry.scripts]
 pycis = "pycis.cli.pycis_command:pycis_root_command"
