--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ python = ">=3.8,<4.0"
 click = "^8.1.4"
 pymongo = {extras = ["srv"], version = "^4.0.0", optional = true}
 couchdb = {version = "^1.2", optional = true}
-mojo-xmodules = ">=0.0.65 <0.1.0"
-mojo-config = "^0.0.20"
+mojo-xmodules = ">=0.0.91 <0.1.0"
+mojo-config = ">=0.0.22 <0.1.0"
 
 [tool.poetry.scripts]
 pycis = "pycis.cli.pycis_command:pycis_root_command"
