--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,11 @@ packages = [{include="pycis", from="source/packages"}]
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
 click = "^8.1.4"
-pymongo = {extras = ["srv"], version = "^4.0.0", optional = true}
+pymongo = {version = "^4.0.0", optional = true}
 couchdb = {version = "^1.2", optional = true}
 mojo-xmodules = ">=1.3.0 <1.4.0"
 mojo-config = ">=1.3.0 <1.4.0"
+jira = {version="^3.8.0", optional = true}
 
 [tool.poetry.scripts]
 pycis = "pycis.cli.pycis_command:pycis_root_command"
@@ -29,6 +30,7 @@ pycis = "pycis.cli.pycis_command:pycis_root_command"
 [tool.poetry.extras]
 mongodb = ["pymongo"]
 couchdb = ["couchdb"]
+jira = ["jira"]
 
 [tool.poetry.group.dev.dependencies]
 myst-parser = "^0.18.1"
