--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pycis-cli"
 description = "Python Continuous Integration System (PyCIS) - CLI Tools"
-version = "0.1.1"
+version = "0.1.2"
 authors = []
 readme = "README.rst"
 license = "LICENSE.txt"
@@ -16,11 +16,12 @@ keywords = [
 packages = [{include="pycis", from="source/packages"}]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.9 <4.0"
 click = "^8.1.4"
 pymongo = {version = "^4.0.0", optional = true}
 couchdb = {version = "^1.2", optional = true}
 mojo-xmodules = ">=1.3.0 <1.4.0"
+mojo-credentials = ">=1.3.10 <1.4.0"
 mojo-config = ">=1.3.0 <1.4.0"
 jira = {version="^3.8.0", optional = true}
 
