--- a/workspaces/pycis-cli.template
+++ b/workspaces/pycis-cli.template
@@ -19,6 +19,6 @@
             "${TMPLT:REPOSITORY_FOLDER}/.venv/lib/${TMPLT:PYTHON_VERSION}/site-packages",
             "${TMPLT:REPOSITORY_FOLDER}/source/packages"
         ],
-        "python.terminal.activateEnvInCurrentTerminal": true
+        "python.terminal.activateEnvInCurrentTerminal": false
     }
 }
